--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.1</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -144,38 +144,45 @@
             teams[teamIndex].teamName = newName;
         }
 
-        function loadDataFromFirebase() {
-            get(child(ref(db), 'teams')).then(snapshot => {
-                if (snapshot.exists()) {
-                    teams = snapshot.val();
-                    renderTeams();
-                } else {
-                    alert('Keine Teams gefunden!');
-                }
-            });
+        function saveTeamNames() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
 
-            get(child(ref(db), 'spielplan')).then(snapshot => {
-                if (snapshot.exists()) {
-                    schedule = snapshot.val();
-                    renderSchedule();
-                } else {
-                    alert('Kein Spielplan gefunden!');
-                }
-            });
+            for (let i = 0; i < teamTable.length; i++) {
+                const newName = teamTable[i].querySelector('.rename-input').value.trim();
+                teams[i].teamName = newName;
+            }
+
+            set(ref(db, 'teams'), teams)
+                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
+                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
         }
 
-        function renderTeams() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody');
-            teamTable.innerHTML = '';
-            teams.forEach((team, index) => {
-                const row = `<tr>
-                    <td>Team ${index + 1}</td>
-                    <td>${team.player1}</td>
-                    <td>${team.player2}</td>
-                    <td><input type="text" class="rename-input" value="${team.teamName}" onchange="updateTeamName(${index}, this.value)"></td>
-                </tr>`;
-                teamTable.innerHTML += row;
-            });
+        function generateSchedule() {
+            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+            scheduleTable.innerHTML = '';
+            schedule = [];
+
+            if (teams.length < 2) {
+                alert('Es müssen mindestens zwei Teams vorhanden sein!');
+                return;
+            }
+
+            set(ref(db, 'spielplan'), null);
+
+            let matchCount = 1;
+            for (let i = 0; i < teams.length; i++) {
+                for (let j = i + 1; j < teams.length; j++) {
+                    const game = {
+                        match: matchCount++,
+                        team1: teams[i].teamName,
+                        team2: teams[j].teamName,
+                        result: ''
+                    };
+                    schedule.push(game);
+                    scheduleTable.innerHTML += `<tr><td>Spiel ${game.match}</td><td>${game.team1}</td><td>${game.team2}</td><td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${game.match - 1}, this.value)"></td></tr>`;
+                }
+            }
+            set(ref(db, 'spielplan'), schedule);
         }
 
         function shuffle(array) {
@@ -187,7 +194,9 @@
 
         window.addPlayer = addPlayer;
         window.drawTeams = drawTeams;
-        window.loadDataFromFirebase = loadDataFromFirebase;
+        window.saveTeamNames = saveTeamNames;
+        window.generateSchedule = generateSchedule;
+        window.updateResult = updateResult;
 
     </script>
 </body>
