--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.1</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -145,13 +145,6 @@
         }
 
         function saveTeamNames() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
-
-            for (let i = 0; i < teamTable.length; i++) {
-                const newName = teamTable[i].querySelector('.rename-input').value.trim();
-                teams[i].teamName = newName;
-            }
-
             set(ref(db, 'teams'), teams)
                 .then(() => alert('Teamnamen erfolgreich gespeichert.'))
                 .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
@@ -169,29 +162,34 @@
 
             set(ref(db, 'spielplan'), null);
 
-            const availableMatches = [];
+            let matchCount = 1;
             for (let i = 0; i < teams.length; i++) {
                 for (let j = i + 1; j < teams.length; j++) {
-                    availableMatches.push({ team1: teams[i].teamName, team2: teams[j].teamName });
+                    const game = {
+                        match: matchCount++,
+                        team1: teams[i].teamName,
+                        team2: teams[j].teamName,
+                        result: ''
+                    };
+                    schedule.push(game);
+                    scheduleTable.innerHTML += `<tr><td>Spiel ${game.match}</td><td>${game.team1}</td><td>${game.team2}</td><td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${game.match - 1}, this.value)"></td></tr>`;
                 }
             }
-
-            let matchCount = 1;
-            availableMatches.forEach(match => {
-                schedule.push({ match: matchCount++, ...match, result: '' });
-            });
-
             set(ref(db, 'spielplan'), schedule);
-            alert('Neuer Spielplan erfolgreich erstellt!');
+        }
+
+        function updateResult(matchIndex, result) {
+            schedule[matchIndex].result = result;
+            set(ref(db, 'spielplan'), schedule);
         }
 
         function loadDataFromFirebase() {
-            get(child(ref(db), 'spielplan')).then(snapshot => {
+            get(child(ref(db), 'spielplan')).then((snapshot) => {
                 if (snapshot.exists()) {
                     schedule = snapshot.val();
-                    alert('Daten erfolgreich geladen!');
+                    generateSchedule();
                 } else {
-                    alert('Keine Daten gefunden!');
+                    alert('Keine Daten in Firebase gefunden.');
                 }
             }).catch(error => console.error('Fehler beim Laden der Daten:', error));
         }
@@ -207,6 +205,7 @@
         window.drawTeams = drawTeams;
         window.saveTeamNames = saveTeamNames;
         window.generateSchedule = generateSchedule;
+        window.updateResult = updateResult;
         window.loadDataFromFirebase = loadDataFromFirebase;
     </script>
 </body>
