--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.1</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -143,7 +143,7 @@
             teams[teamIndex].teamName = newName;
         }
 
-        function saveTeamNames() {
+       function saveTeamNames() {
             const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
 
             for (let i = 0; i < teamTable.length; i++) {
@@ -152,7 +152,17 @@
             }
 
             set(ref(db, 'teams'), teams)
-                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
+                .then(() => {
+                    set(ref(db, 'spielplan'), schedule.map(game => {
+                        const updatedGame = {
+                            ...game,
+                            team1: teams.find(team => team.teamName === game.team1)?.teamName || game.team1,
+                            team2: teams.find(team => team.teamName === game.team2)?.teamName || game.team2
+                        };
+                        return updatedGame;
+                    }));
+                    alert('Teamnamen und Spielplan erfolgreich aktualisiert.');
+                })
                 .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
         }
 
