--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.2</title>
+    <title>Team-Losung Tischtennis v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -166,6 +166,22 @@
                 .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
         }
 
+        function updateScheduleWithNewNames() {
+            schedule.forEach(game => {
+                const team1 = teams.find(team => team.player1 === game.team1 || team.player2 === game.team1);
+                const team2 = teams.find(team => team.player1 === game.team2 || team.player2 === game.team2);
+
+                if (team1 && team2) {
+                    game.team1 = team1.teamName;
+                    game.team2 = team2.teamName;
+                }
+            });
+
+            set(ref(db, 'spielplan'), schedule)
+                .then(() => alert('Spielplan erfolgreich aktualisiert.'))
+                .catch(error => console.error('Fehler beim Aktualisieren des Spielplans:', error));
+        }
+        
         function generateSchedule() {
     const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
     scheduleTable.innerHTML = '';
