--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.1</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -153,15 +153,8 @@
 
             set(ref(db, 'teams'), teams)
                 .then(() => {
-                    set(ref(db, 'spielplan'), schedule.map(game => {
-                        const updatedGame = {
-                            ...game,
-                            team1: teams.find(team => team.teamName === game.team1)?.teamName || game.team1,
-                            team2: teams.find(team => team.teamName === game.team2)?.teamName || game.team2
-                        };
-                        return updatedGame;
-                    }));
-                    alert('Teamnamen und Spielplan erfolgreich aktualisiert.');
+                    alert('Teamnamen erfolgreich gespeichert.');
+                    updateScheduleWithNewNames();
                 })
                 .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
         }
