--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spielplan v1.0</title>
+    <title>Spielplan v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,6 +54,20 @@
         </thead>
         <tbody>
             <!-- Der Zwischenstand wird hier eingefügt -->
+        </tbody>
+    </table>
+
+     <h3>Team-Mitglieder:</h3>
+    <table id="teamsTable">
+        <thead>
+            <tr>
+                <th>Team</th>
+                <th>Mitglied 1</th>
+                <th>Mitglied 2</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Die Team-Mitglieder werden hier eingefügt -->
         </tbody>
     </table>
 
